--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="toggler" style="background-color:orange">
                 <input type="checkbox" class="toggler-checkbox" id="2">
-                <p>Fast food locations</p>
+                <p>Fast food</p>
             </div>
             <div class="toggler" style="background-color:red">
                 <input type="checkbox" class="toggler-checkbox" id="3">
